2012-01-31  Sergio Martin <sergio.martin@artica.es>

	* include/functions_inventories.php
	include/functions_db.php
	operation/side_menu.php
	operation/contracts/contract_detail.php
	operation/contacts/contact_detail.php
	operation/companies/company_role.php
	operation/companies/company_detail.php: Fixed several 
	ACLs issues into the companies section

2012-01-31 Dario Rodriguez <dario.rodriguez@artica.es>

	* index.php: Removed developer_bypass hook.
	* general/error_noconfig.php,
	general/error_install.php,
	general/error_perms.php: Fixed some problems with error page style.

2012-01-30  Sergio Martin <sergio.martin@artica.es>

	* operation/search.php: Fixed global search trimming the search
	to avoid errors and adding activities of the companies to search it

2012-01-30  Sergio Martin <sergio.martin@artica.es>

	* operation/contacts/contact_detail.php: Fixed SQL error showed
	when try to create a contract without company and ACLs in the 
	contracts view

2012-01-30  Sergio Martin <sergio.martin@artica.es>

	*  operation/inventories/manage_prod.php: Fixed a string
	that was incomplete

	* godmode/setup/setup.php
	godmode/setup/setup_mailtemplates.php
	godmode/setup/setup_auth.php
	godmode/setup/setup_visual.php: Fixed several strings
	that were out of translate.

2012-01-30  Sergio Martin <sergio.martin@artica.es>

	* include/js/integria_incident_search.js: Fixed assigned user 
	change from massive operations into incidents

2012-01-27  Sergio Martin <sergio.martin@artica.es>

	* include/graphs/functions_fsgraph.php
	include/graphs/fgraph.php: Added xaxis and yaxis name to
	flash graphs for bug 3313902

2012-01-27  Sergio Martin <sergio.martin@artica.es>

	* include/js/integria_incident_search.js: Fixed the epilog
	visibility of an incident when details charge for bug 3438764

2012-01-27  Sergio Martin <sergio.martin@artica.es>

	* include/functions_form.php
	operation/incidents/incident.php
	operation/incidents/incident_notes.php